Fix page with GForms spacing

--- a/src/scss/pages/_fix.scss
+++ b/src/scss/pages/_fix.scss
@@ -1,4 +1,6 @@
 // Llamada a patrocinadores #WCMAD
-.postid-4 .post-inner + .section-inner {
+.postid-4 .post-inner + .section-inner,
+.postid-5 .post-inner + .section-inner,
+.postid-6 .post-inner + .section-inner {
   display: none;
 }
